2021-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c (jtag3_edbg_recv_frame): Better handling for
	fragment_info == 0x00 (no response available)

2021-11-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c: Use matches() instead of strncmp()

2021-11-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	patch #9757: Fix ATtiny817 Xplained Mini programmer
	* jtag3.c (jtag3_getsync, jtag3_close): correctly extract
	programmer name from list of names

2021-11-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by David Sainty:
	patch #8719: Support Over-the-Air bootloading with XBeeBoot
	* xbee.c: New programmer
	* xbee.h: (Dito.)
	* pgm_type.c: Add xbee.h
	* avrdude.conf.in (xbee): New programmer
	* Makefile.am (libavrdude_a_SOURCES): add xbee.c, xbee.h
	* avrdude.1: document the new programmer
	* doc/avrdude.texi: (Dito.)

2021-11-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Ivan Frederiks:
	patch #9079: Fix ftdi_syncbb teardown (supersedes #9893)
	patch #9122: Fixed MISO sampling in ftdi_syncbb
	patch #9123: ftdi_syncbb: use FT245R_CYCLES in ft245r_set_bitclock()
	* ft245r.c: Various fixes for FT245-bitbang programmers

2021-11-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by David Mosberger-Tang:
	patch #9320: fix TPI RESET in bitbang.c
	* bitbang.c (bitbang_initialize): wait for 128 ms after deasserting
	/RESET (per datasheet), and keep /RESET low during MOSI/MISO link check

2021-11-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Jon Thacker:
	patch #9253: Fix for giving terminal_mode commands more than 20 arguments
	* term.c (tokenize): fix realloc usage, pointer returned not necessarily
	the same as pointer passed

2021-11-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Martino Facchin:
	patch #9110: Let reserved fuse bits to be read as *don't care*
	* avr.c (compare_memory_masked): New function
	* libavrdude.h: declare compare_memory_masked(); also, insist on C99
	so <stdint.h> is required now