@@ -1,5 +1,10 @@
 2021-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* ft245r.c (ft245r_open): allow for picking a default
+	device if none has been provided by -P
+
+2021-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* jtag3.c (jtag3_edbg_recv_frame): Better handling for
 	fragment_info == 0x00 (no response available)
 
